"fixed" play button

--- a/theme.css
+++ b/theme.css
@@ -814,7 +814,7 @@ lol-uikit-flat-button-secondary{
 
 
 .basic-button{
-  left: 470px !important;
+  left: 32vw !important;
   height: 48px !important;
   width: 122px !important;
   top: 15px !important;
